cfn_benchmark/cfn_templates/Juniper__vSRX-AWS/vSRX_AWS_GWLB/vsrx_cft/vsrx_aws_gwlb_no_asg_az/vsrx_aws_gwlb_security_no_asg_az.yaml
# Copyright (c) Juniper Networks, Inc., 2023. All rights reserved.

---
# Juniper Network vSRX cloud formation template to launch the following resources in AWS
#            * Creates a security VPC by taking the CIDR as params
#            * Launches the vSRX that supports GENEVE encapsulation.
#            * Creates a data and a mgmt subnet
#            * Launches the vSRX management interface in the mgmt subnet
#            * Launches one of the revenue interfaces in the data subnet.
#            * Launches the gateway load balancer in the data subnet of the security spoke.
#            * Add the vSRX into the target group and as a listener to the GWLB.
AWSTemplateFormatVersion: 2010-09-09
Description: |
          Juniper Network vSRX cloud formation template to launch a Simple VPC with mgmt and data subnet
          along with the GWLB and vSRX in two AZ

Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: "vSRX GWLB Security VPC Network Configuration"
        Parameters:
          - VpcCidrP

      - Label:
          default: "vSRX Appliance Security VPC Network Configuration - AZ 1"
        Parameters:
          - UseAz1P
          - MgmtCidr1P
          - DataCidr1P

      - Label:
          default: "vSRX Appliance Security VPC Network Configuration - AZ 2"
        Parameters:
          - UseAz2P
          - MgmtCidr2P
          - DataCidr2P
      - Label:
          default: "Bastion Host(Jump Server) in mgmt subnet"
        Parameters:
          - BastionHostKeyPairP
          - BastionHostAmiIdP
          - BastionHostSgP
      - Label:
          default: "vSRX configuration"
        Parameters:
          - vSrxAmiIdP
          - vSrxKeyPairP
          - vSrxHostSgP
          - vSrxInstanceTypeP
          - vSrxGwlbHealthProtocolP
          - vSrxGwlbHealthPortP
      - Label:
          default: "S3 Bucket config"
        Parameters:
          - s3BucketNameP
          - s3LambdaZipP
          - LogLevelP
    ParameterLabels:
      # vSRX GWLB VPC Network Configuration Paramater Label
      VpcCidrP:
        default: "CIDR for the vSRX-GWLB security spoke VPC"
      # AZ-1 Network subnet configuration
      UseAz1P:
        default: "Select AZ-1 to launch vSRX"
      MgmtCidr1P:
        default: "CIDR for mgmt subnet in AZ-1 for vSRX"
      DataCidr1P:
        default: "CIDR for data subnet in AZ-1 for vSRX"
       # AZ-2 Network subnet configuration
      UseAz2P:
        default: "Select AZ-2 to launch vSRX"
      MgmtCidr2P:
        default: "CIDR for mgmt subnet in AZ-2 for vSRX"
      DataCidr2P:
        default: "CIDR for data subnet in AZ-2 for vSRX"

      # Bastion Host Paramater Label
      BastionHostKeyPairP:
        default: "Choose existing keypair to manage bastion host"
      BastionHostAmiIdP:
        default: "AMI-ID for the bastion host for the region"
      BastionHostSgP:
        default: "CIDR or Source IP address to whitelist SSH access, the default is 0.0.0.0/0"
      # vSRX Host Paramater Label
      vSrxAmiIdP:
        default: "AMI-ID for the vSRX for the region"
      vSrxKeyPairP:
        default: "Choose keypair to manage vSRX"
      vSrxHostSgP:
        default: "CIDR or Source IP address to whitelist SSH access, the default is 0.0.0.0/0"
      vSrxInstanceTypeP:
        default: "Instance type for the vSRX default: c5.large"
      vSrxGwlbHealthProtocolP:
        default: "Health check Protocol to use with GWLB"
      vSrxGwlbHealthPortP:
        default: "Health check Port to use with GWLB"

      # S3 bucket configuration
      s3BucketNameP:
        default:  "Preconfigured S3 bucket name which has vsrx_lambda code as zip file"
      s3LambdaZipP:
        default: "Preconfigured S3 bucket key which points to .zip file example: vsrx_lambda.zip"
      LogLevelP:
        default: "Log level for lambda function"
Parameters:
  VpcCidrP:
    Description: "Security VPC CIDR"
    Type: String
    Default: "192.168.0.0/24"
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/((1[6-9])|(2[0-8])))
    ConstraintDescription: "Please specify the valid IP address in x.x.x.x/16-28 format"

  UseAz1P:
    Description: "Availability Zone - 1"
    Type: AWS::EC2::AvailabilityZone::Name
    ConstraintDescription: "Select the valid Availability Zone"

  MgmtCidr1P:
    Description: "Mgmt subnet CIDR - AZ 1"
    Type: String
    Default: "192.168.0.0/28"
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/((1[6-9])|(2[0-8])))
    ConstraintDescription: "Please specify the valid IP address in x.x.x.x/16-28 format"

  DataCidr1P:
    Description: "Data subnet CIDR - AZ 1"
    Type: String
    Default: "192.168.0.64/28"
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/((1[6-9])|(2[0-8])))
    ConstraintDescription: "Please specify the valid IP address in x.x.x.x/16-28 format"

  UseAz2P:
    Description: "Availability Zone - 2"
    Type: AWS::EC2::AvailabilityZone::Name
    ConstraintDescription: "Select the valid Availability Zone"

  MgmtCidr2P:
    Description: "Mgmt subnet CIDR - AZ 2"
    Type: "String"
    Default: "192.168.0.128/28"
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/((1[6-9])|(2[0-8])))
    ConstraintDescription: "Please specify the valid IP address in x.x.x.x/16-28 format"

  DataCidr2P:
    Description: "Data subnet CIDR - AZ 2"
    Type: "String"
    Default: "192.168.0.192/28"
    MinLength: 9
    MaxLength: 18
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/((1[6-9])|(2[0-8])))
    ConstraintDescription: "Please specify the valid IP address in x.x.x.x/16-28 format"

  BastionHostAmiIdP:
    Description: "AMI-ID for the bastion host"
    Type: String
    AllowedPattern: (ami\-[a-zA-Z0-9-]+)
    ConstraintDescription: "Invalid AMI-ID for the bastion host"

  BastionHostKeyPairP:
    Description: "Keypair for bastion host management"
    Type: AWS::EC2::KeyPair::KeyName  #ec2 instance keypair - same for all
    ConstraintDescription: "Invalid key pair"

  BastionHostSgP:
    Description: "CIDR to whitelist IP address to allow SSH access to bastion host"
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2})
    ConstraintDescription: "Invalid IP address or CIDR"

  vSrxAmiIdP:
    Description: "AMI-ID for the vSRX"
    Type: String
    AllowedPattern: (ami\-[a-zA-Z0-9-]+)
    ConstraintDescription: "Invalid AMI-ID for the vSRX"

  vSrxKeyPairP:
    Description: "Keypair for vSRX management"
    Type: AWS::EC2::KeyPair::KeyName
    ConstraintDescription: "Please select the existing keypair name to gain SSH access to the vSRX"

  vSrxHostSgP:
    Description: "CIDR to whitelist IP address to allow SSH access to vSRX"
    Type: String
    Default: 0.0.0.0/0
    AllowedPattern: (\d{1,3}\.\d{1,3}\.\d{1,3}\.\d{1,3}\/\d{1,2})
    ConstraintDescription:  "Invalid IP address or CIDR"

  vSrxInstanceTypeP:
    Description: "Provide the instance type for vSRX"
    Type: String
    Default: c5.large
    AllowedValues:
      - c5.large
      - c5.xlarge
      - c5.2xlarge
      - c5.4xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge

  vSrxGwlbHealthProtocolP:
    Description: "Health check protocol"
    Type: String
    Default: TCP
    AllowedValues:
      - TCP
      - HTTPS

  vSrxGwlbHealthPortP:
     Description:  "Health check port number"
     Type: String
     Default: "49160"
     AllowedValues:
      - "49160"
      - "443"

  s3BucketNameP:
    Description: "Preconfigured S3 bucket name with lambda function code zip"
    Type: String
    AllowedPattern: ([a-z0-9-.]+)
    ConstraintDescription: "S3 bucket name only contains the lowercase letters, numbers, dots(.) and hyphens(-)"

  s3LambdaZipP:
    Description: "Preconfigured S3 bucket key to the lambda zip file"
    Type: String
    Default: vsrx_lambda.zip
    AllowedPattern: (^[a-z0-9-_]+\.zip$)
    ConstraintDescription: "Needs to be zip file that contains the vSRX lambda functions ( Allowed to have hyphens(-) and underscore (_)"

  LogLevelP:
    Description: "Log level for Lambda function"
    Type: String
    Default: info
    AllowedValues:
      - info
      - debug
      - none

Conditions:
  isRpmPortC: !And [!Equals [!Ref vSrxGwlbHealthProtocolP, "TCP"], !Equals [!Ref vSrxGwlbHealthPortP, "49160"]]

Resources:
    VpcR:
      Type: AWS::EC2::VPC
      Properties:
        CidrBlock: !Ref VpcCidrP
        EnableDnsHostnames: true
        EnableDnsSupport: true
        InstanceTenancy: "default"
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-security-vpc'

    IgwR:
      Type: AWS::EC2::InternetGateway
      Properties:
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-security-vpc-IGW'

    AttachIgwR:
      Type: AWS::EC2::VPCGatewayAttachment
      Properties:
        VpcId: !Ref VpcR
        InternetGatewayId: !Ref IgwR

    ################################################   AZ - 1  ################################################
    MgmtSubnet1R:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: !Ref UseAz1P
        VpcId: !Ref VpcR
        CidrBlock: !Ref MgmtCidr1P
        MapPublicIpOnLaunch: true
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-security-${UseAz1P}-mgmt-subnet'

    DataSubnet1R:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: !Ref UseAz1P
        VpcId: !Ref VpcR
        CidrBlock: !Ref DataCidr1P
        MapPublicIpOnLaunch: false
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-security-${UseAz1P}-data-subnet'

    MgmtRouteTable1R:
      Type: AWS::EC2::RouteTable
      Properties:
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-security-${UseAz1P}-mgmt-route'
        VpcId: !Ref VpcR

    DataRouteTable1R:
      Type: AWS::EC2::RouteTable
      Properties:
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-security-${UseAz1P}-data-route'
        VpcId: !Ref VpcR

    MgmtSubnetRouteAssociation1R:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref MgmtRouteTable1R
        SubnetId: !Ref MgmtSubnet1R

    DataSubnetRouteAssociation1R:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref DataRouteTable1R
        SubnetId: !Ref DataSubnet1R

    MgmtRouteTableEntry1R:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref MgmtRouteTable1R
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref IgwR
      DependsOn:
        - AttachIgwR

    DataRouteTableEntry1R:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref DataRouteTable1R
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NatGw1R

    NatGwEip1R:
      Type: AWS::EC2::EIP
      Properties:
        Domain: vpc
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-security-${UseAz1P}-natgw-eip'

    NatGw1R:
      Type: AWS::EC2::NatGateway
      Properties:
        AllocationId: !GetAtt NatGwEip1R.AllocationId
        ConnectivityType: public
        SubnetId: !Ref MgmtSubnet1R
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-security-${UseAz1P}-natgw'

    ################################################   AZ - 2  ################################################
    MgmtSubnet2R:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: !Ref UseAz2P
        VpcId: !Ref VpcR
        CidrBlock: !Ref MgmtCidr2P
        MapPublicIpOnLaunch: true
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX2-security-${UseAz2P}-mgmt-subnet'

    DataSubnet2R:
      Type: AWS::EC2::Subnet
      Properties:
        AvailabilityZone: !Ref UseAz2P
        VpcId: !Ref VpcR
        CidrBlock: !Ref DataCidr2P
        MapPublicIpOnLaunch: false
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX2-security-${UseAz2P}-data-subnet'

    MgmtRouteTable2R:
      Type: AWS::EC2::RouteTable
      Properties:
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX2-security-${UseAz2P}-mgmt-route'
        VpcId: !Ref VpcR

    DataRouteTable2R:
      Type: AWS::EC2::RouteTable
      Properties:
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX2-security-${UseAz2P}-data-route'
        VpcId: !Ref VpcR

    MgmtSubnetRouteAssociation2R:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref MgmtRouteTable2R
        SubnetId: !Ref MgmtSubnet2R

    DataSubnetRouteAssociation2R:
      Type: AWS::EC2::SubnetRouteTableAssociation
      Properties:
        RouteTableId: !Ref DataRouteTable2R
        SubnetId: !Ref DataSubnet2R

    MgmtRouteTableEntry2R:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref MgmtRouteTable2R
        DestinationCidrBlock: 0.0.0.0/0
        GatewayId: !Ref IgwR
      DependsOn:
        - AttachIgwR

    DataRouteTableEntry2R:
      Type: AWS::EC2::Route
      Properties:
        RouteTableId: !Ref DataRouteTable2R
        DestinationCidrBlock: 0.0.0.0/0
        NatGatewayId: !Ref NatGw2R

    NatGwEip2R:
      Type: AWS::EC2::EIP
      Properties:
        Domain: vpc
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX2-security-${UseAz2P}-natgw-eip'

    NatGw2R:
      Type: AWS::EC2::NatGateway
      Properties:
        AllocationId: !GetAtt NatGwEip2R.AllocationId
        ConnectivityType: public
        SubnetId: !Ref MgmtSubnet2R
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX2-security-${UseAz2P}-natgw'

    BastionSGR:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: "Security group for the mgmt subnet of the vSRX security VPC"
        GroupName: !Sub '${AWS::StackName}-vSRX-bastion-host-sg'
        VpcId: !Ref VpcR
        SecurityGroupEgress:
          - CidrIp: 0.0.0.0/0
            Description: "Egress rule to allow everything"
            FromPort: -1
            IpProtocol: "-1"
            ToPort: -1
        SecurityGroupIngress:
           - CidrIp: !Ref BastionHostSgP
             Description: "Ingress rule to allow SSH"
             FromPort: 22
             IpProtocol: tcp
             ToPort: 22
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-bastion-host-sg'

    BastionHost1R:
      Type: AWS::EC2::Instance
      Properties:
        AvailabilityZone: !Ref UseAz1P
        ImageId: !Ref BastionHostAmiIdP
        KeyName: !Ref BastionHostKeyPairP
        InstanceType: t2.micro
        SubnetId: !Ref MgmtSubnet1R
        SecurityGroupIds:
          - !Ref BastionSGR
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX1-bastion-host-${UseAz1P}-mgmt-subnet'

    vSrxSgMgmtR:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: "Security group for the mgmt subnet of the vSRX security VPC"
        GroupName: !Sub '${AWS::StackName}-vSRX2-mgmt-sg'
        VpcId: !Ref VpcR
        SecurityGroupEgress:
          - CidrIp: 0.0.0.0/0
            Description: "Egress rule to allow everything"
            FromPort: -1
            IpProtocol: "-1"
            ToPort: -1
        SecurityGroupIngress:
           - CidrIp: !Ref vSrxHostSgP
             Description: "Ingress rule to allow SSH"
             FromPort: 22
             IpProtocol: tcp
             ToPort: 22
           - CidrIp: !Ref vSrxHostSgP
             Description: "Ingress rule to allow http"
             FromPort: 80
             IpProtocol: tcp
             ToPort: 80
           - CidrIp: !Ref vSrxHostSgP
             Description: "Ingress rule to allow ICMP"
             FromPort: -1
             IpProtocol: icmp
             ToPort: -1

           - CidrIp: !Ref VpcCidrP
             Description: "Ingress rule to allow ssh"
             FromPort: 22
             IpProtocol: tcp
             ToPort: 22
           - CidrIp: !Ref VpcCidrP
             Description: "Ingress rule to allow http"
             FromPort: 80
             IpProtocol: tcp
             ToPort: 80
           - CidrIp: !Ref VpcCidrP
             Description: "Ingress rule to allow ICMP"
             FromPort: -1
             IpProtocol: icmp
             ToPort: -1

        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-mgmt-sg'

    vSrxSgDataR:
      Type: AWS::EC2::SecurityGroup
      Properties:
        GroupDescription: "Security group for the data subnet of the vSRX security VPC"
        GroupName: !Sub '${AWS::StackName}-vSRX2-data-sg'
        VpcId: !Ref VpcR
        SecurityGroupEgress:
          - CidrIp: 0.0.0.0/0
            Description: "Egress rule to allow everything"
            FromPort: -1
            IpProtocol: "-1"
            ToPort: -1
        SecurityGroupIngress:
           - CidrIp: !Ref DataCidr1P
             Description: "Ingress rule to allow all traffic"
             FromPort: -1
             IpProtocol: "-1"
             ToPort: -1
           - CidrIp: !Ref DataCidr2P
             Description: "Ingress rule to allow all traffic"
             FromPort: -1
             IpProtocol: "-1"
             ToPort: -1
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-data-sg'

    vSrxBootRoleR:
      Type: AWS::IAM::Role
      Properties:
        Description: "IAM role for the vSRX instance boot cloud init"
        AssumeRolePolicyDocument:
          Version: "2012-10-17"
          Statement:
            - Effect: Allow
              Principal:
                Service:
                  - ec2.amazonaws.com
              Action:
                - 'sts:AssumeRole'
        Path: /
        Policies:
          - PolicyName: !Sub '${AWS::StackName}-vSRX-boot-policy'
            PolicyDocument:
              Version: '2012-10-17'
              Statement:
                - Effect: Allow
                  Action: s3:GetObject
                  Resource: !Join
                    - ""
                    - - "arn:aws:s3:::"
                      - !Ref s3BucketNameP
                      - "/*"
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-boot-policy'

    vSrxInstanceProfile:
      Type: AWS::IAM::InstanceProfile
      Properties:
        Path: /
        Roles:
          - !Ref vSrxBootRoleR

    vSrxLaunchTemplateR:
      Type: AWS::EC2::LaunchTemplate
      Properties:
        LaunchTemplateName: !Sub '${AWS::StackName}-vSRX-launch-template'
        LaunchTemplateData:
          IamInstanceProfile:
            Arn: !GetAtt  vSrxInstanceProfile.Arn
          BlockDeviceMappings:
            - DeviceName: /dev/sda1
              Ebs:
                VolumeSize: 20
                DeleteOnTermination: true
                VolumeType: "gp2"
          ImageId: !Ref vSrxAmiIdP
          InstanceType: !Ref vSrxInstanceTypeP
          KeyName: !Ref vSrxKeyPairP

          UserData:
            Fn::Base64:
              !Join
                - ''
                - - |
                    #junos-config
                    security {
                        policies {
                            from-zone AWS to-zone junos-host {
                                policy SELF {
                                    match {
                                        source-address any;
                                        destination-address any;
                                        application [ junos-geneve junos-http junos-tcp-any junos-https ];
                                    }
                                    then {
                                        permit {
                                            tunnel-inspection {
                                                AWS-inspection-profile;
                                            }
                                        }
                                    }
                                }
                                policy SELF_DHCP {
                                    match {
                                        source-address any;
                                        destination-address any;
                                        application junos-dhcp-client;
                                    }
                                    then {
                                        permit;
                                    }
                                }
                            }
                            policy-set AWS-policy-set {
                                policy AWS-policy {
                                    match {
                                        source-address any;
                                        destination-address any;
                                        application any;
                                    }
                                    then {
                                        permit;
                                    }
                                }
                            }
                        }
                        zones {
                            security-zone AWS {
                                host-inbound-traffic {
                                    system-services {
                                        http;
                                        https;
                                        rpm;
                                        dhcp;
                                    }
                                    protocols {
                                        all;
                                    }
                                }
                                interfaces {
                                    ge-0/0/0.0;
                                }
                            }
                        }
                        tunnel-inspection {
                            inspection-profile AWS-inspection-profile {
                                geneve AWS-geneve-profile {
                                    policy-set AWS-policy-set;
                                    vni AWS-vni;
                                }
                            }
                            vni AWS-vni {
                                vni-id 0;
                            }
                        }
                    }
                    interfaces {
                        ge-0/0/0 {
                            mtu 9120;
                            unit 0 {
                                family inet {
                                    dhcp;
                                }
                            }
                        }
                    }

                  # Separates the routing instance for Mgmt
                  - |
                      system {
                            management-instance;
                        }

                  - |
                      routing-instances {
                        mgmt_junos {
                            description "Mgmt_network";
                        }
                      }

                  - !If
                      - isRpmPortC
                      - |
                        services {
                          rpm {
                            probe-server {
                              tcp {
                                port 49160
                              }
                            }
                          }
                        }
                      - ''

    vSrx1R:
      Type: AWS::EC2::Instance
      Properties:
        AvailabilityZone: !Ref UseAz1P
        LaunchTemplate:
          LaunchTemplateId: !Ref vSrxLaunchTemplateR
          Version:  !GetAtt vSrxLaunchTemplateR.LatestVersionNumber
        NetworkInterfaces:
          - DeviceIndex: 0
            GroupSet:
              - !Ref vSrxSgMgmtR
            SubnetId: !Ref MgmtSubnet1R

          - DeviceIndex: 1
            GroupSet:
              - !Ref vSrxSgDataR
            SubnetId: !Ref DataSubnet1R

        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-${UseAz1P}-vSRX'

    vSrx2R:
      Type: AWS::EC2::Instance
      Properties:
        AvailabilityZone: !Ref UseAz2P
        LaunchTemplate:
          LaunchTemplateId: !Ref vSrxLaunchTemplateR
          Version:  !GetAtt vSrxLaunchTemplateR.LatestVersionNumber
        NetworkInterfaces:
          - DeviceIndex: 0
            GroupSet:
              - !Ref vSrxSgMgmtR
            SubnetId: !Ref MgmtSubnet2R

          - DeviceIndex: 1
            GroupSet:
              - !Ref vSrxSgDataR
            SubnetId: !Ref DataSubnet2R

        Tags:
         - Key: "Name"
           Value: !Sub '${AWS::StackName}-${UseAz2P}-vSRX'

    vSrxLambdaRoleR:
      Type: AWS::IAM::Role
      Properties:
        AssumeRolePolicyDocument:
          Version: '2012-10-17'
          Statement:
          - Effect: Allow
            Principal:
              Service:
              - lambda.amazonaws.com
            Action:
            - sts:AssumeRole
        Path: "/"
        ManagedPolicyArns:
          - arn:aws:iam::aws:policy/CloudWatchFullAccess
          - arn:aws:iam::aws:policy/AmazonS3FullAccess
          - arn:aws:iam::aws:policy/AmazonEC2FullAccess
          - arn:aws:iam::aws:policy/service-role/AWSLambdaBasicExecutionRole
        Policies:
        - PolicyName: !Sub '${AWS::StackName}-vSRX-lambda-iam-policies'
          PolicyDocument:
            Version: '2012-10-17'
            Statement:
            - Effect: Allow
              Action:
              - logs:CreateLogGroup
              - logs:CreateLogStream
              - logs:PutLogEvents
              Resource: arn:aws:logs:*:*:*
            - Effect: Allow
              Action:
              - ec2:DescribeImages
              Resource: "*"
            - Effect: Allow
              Action:
                - ec2:*
                - events:*
                - cloudwatch:*
                - autoscaling:*
                - elasticloadbalancing:*
                - cloudformation:DescribeStacks
              Resource: "*"

    vSrxLambdaFunctionR:
       Type: AWS::Lambda::Function
       Properties:
        Architectures:
          - x86_64
        Code:
          S3Bucket: !Ref s3BucketNameP
          S3Key: !Ref s3LambdaZipP
        Description: "Lambda function to custom config vSRX"
        Handler: vsrx_lambda.event_handler
        PackageType: Zip
        Role: !GetAtt vSrxLambdaRoleR.Arn
        Runtime: python3.9
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-lambda-func'
        Timeout: 300
        VpcConfig:
          SecurityGroupIds:
            - !Ref vSrxSgMgmtR
          SubnetIds:
            - !Ref DataSubnet1R
            - !Ref DataSubnet2R

       DependsOn:
          - NatGw1R
          - NatGw2R
          - DataSubnetRouteAssociation1R
          - DataSubnetRouteAssociation2R
          - DataRouteTableEntry1R
          - DataRouteTableEntry2R
          - MgmtSubnetRouteAssociation1R
          - MgmtSubnetRouteAssociation2R
          - MgmtRouteTableEntry1R
          - MgmtRouteTableEntry2R
          - AttachIgwR

    # Custom Resource configuration - Assigning EIP to the management interface
    vSrxAssignEip1R:
        Type: AWS::CloudFormation::CustomResource
        Properties:
          ServiceToken: !GetAtt vSrxLambdaFunctionR.Arn
          # Common config vsrx params
          region: !Ref AWS::Region
          stack_name: !Ref AWS::StackName
          log_level: !Ref LogLevelP

          # Specific to custom resource
          cr_type: "alloc_and_attach_eip" # Mandatory field to indicate what action is required to be performed by lambda
          instance_id: !Ref vSrx1R
          dev_index: 0

     # Custom Resource configuration - Fetch the data interface IP address
    vSrxFetchDataIp1R:
        Type: AWS::CloudFormation::CustomResource
        Properties:
          ServiceToken: !GetAtt vSrxLambdaFunctionR.Arn
          # Common config vsrx params
          region: !Ref AWS::Region
          stack_name: !Ref AWS::StackName
          log_level: !Ref LogLevelP
          # Specific to custom resource
          cr_type: "fetch_instance_ip" # Mandatory field to indicate what action is required to be performed by lambda
          instance_id: !Ref vSrx1R
          dev_index: 1    # Dev_index 1 is always the data interface
          type: private   #Fetch the private IP of device index 1 (corresponds to eth1)

    vSrxAssignEip2R:
        Type: AWS::CloudFormation::CustomResource
        Properties:
          ServiceToken: !GetAtt vSrxLambdaFunctionR.Arn
          # Common config vsrx params
          region: !Ref AWS::Region
          stack_name: !Ref AWS::StackName
          log_level: !Ref LogLevelP
          # Specific to custom resource
          cr_type: "alloc_and_attach_eip" # Mandatory field to indicate what action is required to be performed by lambda
          instance_id: !Ref vSrx2R
          dev_index: 0

     # Custom Resource configuration - Fetch the data interface IP address
    vSrxFetchDataIp2R:
        Type: AWS::CloudFormation::CustomResource
        Properties:
          ServiceToken: !GetAtt vSrxLambdaFunctionR.Arn
          # Common config vsrx params
          region: !Ref AWS::Region
          stack_name: !Ref AWS::StackName
          log_level: !Ref LogLevelP
          # Specific to custom resource
          cr_type: "fetch_instance_ip" # Mandatory field to indicate what action is required to be performed by lambda
          instance_id: !Ref vSrx2R
          dev_index: 1    # Dev_index 1 is always the data interface
          type: private   #Fetch the private IP of device index 1 (corresponds to eth1)

    GwlbR:
      Type: AWS::ElasticLoadBalancingV2::LoadBalancer
      Properties:
        Type: gateway
        IpAddressType: ipv4
        Name: !Sub '${AWS::StackName}-vSRX-gwlb'
        Subnets:
          - !Ref DataSubnet1R
          - !Ref DataSubnet2R
        LoadBalancerAttributes:
          - Key: load_balancing.cross_zone.enabled
            Value: true
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-gwlb'

    GwlbTargetGroupR:
      Type: AWS::ElasticLoadBalancingV2::TargetGroup
      Properties:
        Name: !Sub '${AWS::StackName}-tg'
        HealthCheckPort: !Ref vSrxGwlbHealthPortP
        HealthCheckProtocol: !Ref vSrxGwlbHealthProtocolP
        Port: 6081
        Protocol: GENEVE
        Tags:
          - Key: "Name"
            Value: !Sub '${AWS::StackName}-vSRX-gwlb-target-group'
        Targets:
            - AvailabilityZone: !Ref UseAz1P
              Id: !GetAtt vSrxFetchDataIp1R.interface_ip
              Port: 6081
            - AvailabilityZone: !Ref UseAz2P
              Id: !GetAtt vSrxFetchDataIp2R.interface_ip
              Port: 6081
        TargetType: ip
        VpcId: !Ref VpcR
      DependsOn: ["GwlbR", "vSrx1R","vSrx2R"]

    vSrxListenerR:
      Type: AWS::ElasticLoadBalancingV2::Listener
      Properties:
        DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref GwlbTargetGroupR
        LoadBalancerArn: !Ref GwlbR

    GwlbEndPointR:
      Type: AWS::EC2::VPCEndpointService
      Properties:
        AcceptanceRequired: false
        GatewayLoadBalancerArns:
          - !Ref GwlbR

     # To fetch some resource info through lambda functions
    GwlbServiceNameR:
        Type: AWS::CloudFormation::CustomResource
        Properties:
          ServiceToken: !GetAtt vSrxLambdaFunctionR.Arn
          # Common config vsrx params
          region: !Ref AWS::Region
          stack_name: !Ref AWS::StackName
          log_level: !Ref LogLevelP

          # Specific to custom resource
          cr_type: "get_resource_info" # Mandatory field to indicate what action is required to be performed by lambda
          resource_type:
            - 'gwlb_end_point_service_name'
          service_id: !Ref GwlbEndPointR

Outputs:
  GwlbId:
    Description: GWLB ID
    Value: !Ref GwlbR
  GwlbEndPointServices:
    Description: GWLB Endpoint services name
    Value: !GetAtt GwlbServiceNameR.gwlb_service_name
...
